# category-base.hs

./: CHANGELOG.md  README.md  category-base.cabal
src/Control/Category/: Dual.hs
src/Data/Morphism/: Endo.hs  Iso.hs
