cabal-version:       2.2
name:                category-base
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/strake/category-base.hs
bug-reports:         https://github.com/strake/category-base.hs/issues
license:             BSD-3-Clause
author:              M Farkas-Dyck
maintainer:          M Farkas-Dyck <strake888@gmail.com>
copyright:           2021 M Farkas-Dyck
build-type:          Simple
extra-doc-files:
  README.md
  CHANGELOG.md
tested-with:GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/strake/category-base.hs.git

common c
  build-depends:       alg ^>= 0.2
                     , base ^>= 4.13 || ^>= 4.14

  ghc-options:
    -Wall
    -Wcompat
    -Wredundant-constraints
    -Wno-name-shadowing
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Werror=incomplete-record-updates
    -Werror=missing-fields
    -Werror=missing-methods
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    EmptyCase
    PolyKinds
    DeriveTraversable
    PackageImports

library
  import:              c
  hs-source-dirs:      src
  exposed-modules:
    Control.Category.Dual
    Control.Category.Groupoid
    Data.Bifunctor.Flip
    Data.Morphism.Endo
    Data.Morphism.Iso
  other-modules:
    Prelude

test-suite test
  import:              c
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       category-base
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark bench
  import:              c
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       gauge
                     , category-base
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
